# WADG_ANN

./: .gitignore  CMakeLists.txt
anals/: anals_debug.py  pure_data_search_time_before.csv  pure_data_search_time_of.csv
dataset/: dataset_list.txt
dataset/bigann/: compute_gt.py
include/efanna2e/: config.h  distance.h  index.h  index_debug.h  index_nsg.h  index_nsg_bm.h  index_nsg_bm_debug.h  index_nsg_debug.h  index_wadg.h  index_wadg_bm.h  index_wadg_bm_debug.h  index_wadg_debug.h
src/: index_nsg.cpp  index_nsg_bm.cpp  index_nsg_bm_debug.cpp  index_nsg_debug.cpp  index_wadg.cpp  index_wadg_bm.cpp  index_wadg_bm.cpp.tmp  index_wadg_bm_debug.cpp.tmp  index_wadg_debug.cpp
tests/: CMakeLists.txt  test_cal_top_K_precision_bm.cpp  test_nsg_index_bm.cpp  test_nsg_search.cpp  test_nsg_search_bm.cpp  test_wadg_search.cpp  test_wadg_search_bm.cpp.tmp
